# AI-Nova

./: .gitignore  BEDROCK_SETUP.md  README_CLAUDE_WORKFLOW.md  complex_integration.py  dynamodb_test.py  main.py  package-lock.json  package.json  prompt.txt  pull_ai_nova.py  pyproject.toml  test.py  test_integration.py  test_vector_math.py  vector_math.py
.github/workflows/: add-issue-to-project.yml  add-pr-to-project.yml  failed-action-reviewer.yml  import_issue_helper.yaml  issue-helper.yml  issue-revision.yml  test-failure.yml
amplify/backend/auth/: policy.json
app/: app.css  page.tsx
app/api/analyze-image/: route.ts
app/components/: ImageUpload.tsx
claude_code_tools/: README.md  __init__.py  cli_integration.py  documentation_agent.py
claude_scripts/: deployment_guide.txt  project_info.txt
claude_tools/: __init__.py  claude_client.py  text_editor.py
documentation_agent/: README.md  agent.py  cli.py  config.py  requirements.txt  setup.py  system_prompt.txt  test_agent.py
pictures/: analyze_vocab_test.py  background_remover.py  bedrock_photo_editor.py  image_generator.py  openai_image_generator.py  requirements.txt
scripts/: README.md  analysis-prompt.txt  failed-action-reviewer.js  issue-handler.js  project-context.txt  system-prompt.txt
